✨   â✨ Guía de Instalación SQL ✨

--- a/pages/install-sql/index.html
+++ b/pages/install-sql/index.html
@@ -22,7 +22,7 @@
 <body>
   <google-codelab-analytics gaid="UA-49880327-14"></google-codelab-analytics>
   <google-codelab codelab-gaid=""
-                  id="InstallSQL"
+                  id="install-sql"
                   title="Instalación de SQL"
                   environment="web"
                   feedback-link="https://github.com/01-2022-Bases-de-datos-UCA/Codelabs/issues">
