✨ Guía de Instalación SQL ✨

--- a/pages/install-sql/index.html
+++ b/pages/install-sql/index.html
@@ -27,6 +27,21 @@
                   environment="web"
                   feedback-link="https://github.com/01-2022-Bases-de-datos-UCA/Codelabs/issues">
     
+      <google-codelab-step label="Requerimientos para instalar SQL developer" duration="0">
+        <p class="image-container"><img alt="test" src="img\\1b33fe1970399118.jpg"></p>
+<ul>
+<li>Windows 10 TH1 1507 o una versión superior / Windows Server 2016 o una versión posterior</li>
+<li>.NET Framework</li>
+<li>Mínimo: 1GB de RAM / Se recomienda: 4GB de RAM</li>
+<li>6GB de espacio disponible en el disco</li>
+<li>Procesador mínimo: x64: 1,4 GHz / Procesador recomendado: x64 2.0 GHZ o superior</li>
+</ul>
+<aside class="special"><p> Nota: Si su equipo no pose los componentes mínimos se le recomienda instalar la versión de <strong>SQL Express</strong>. Que es muy similar a la instalación de SQL Developer que se desarrolla en esta guía. </p>
+</aside>
+
+
+      </google-codelab-step>
+    
       <google-codelab-step label="Descargar SQL Developer" duration="0">
         <p>En el siguiente enlace puede enontrar el sitio web para descargar SQL server: <a href="https://www.microsoft.com/es-es/sql-server/sql-server-downloads" target="_blank">Link de descarga de SQL Server</a>. En nuestro caso vamos a seleccionar la versión de <strong>Desarrolador</strong>, que es la que sale en la imagen abajo a la izquierda.(Haga clic en <strong>Descargar ahora</strong>).</p>
 <p class="image-container"><img alt="test" src="img\\427f120f721f2e64.PNG"></p>
