V3 ✨  uía de Laboratorio02io02 ✨

--- a/pages/laboratorio-02/index.html
+++ b/pages/laboratorio-02/index.html
@@ -130,18 +130,10 @@
 <p>Cada vuelo es realizado por un avión. Los aviones tienen una matrícula que los identifica, el fabricante, un modelo e información sobre su capacidad (número máximo de pasajeros).</p>
 <p>Los pasajeros para poder realizar una reserva, deben registrar su nombre, pasaporte, la fecha de nacimiento, un correo electrónico y el país de origen (nacionalidad). Registrados estos datos, la reserva se podrá registrar, en cada reserva se almacena el precio del servicio, la fecha en que fue realizada la transacción y el tipo de reserva (económica, ejecutiva, primera clase.</p>
 <p>Opcionalmente, un cliente puede incluir servicios extra en cada reserva, como, por ejemplo: wifi satelital, seguros, maletas extra, transporte de mascotas, entre otros. De cada servicio extra, interesa almacenar el nombre del servicio y su precio.</p>
-
-
-      </google-codelab-step>
-    
-      <google-codelab-step label="Solución Ejercicio Practico" duration="0">
-        <p class="image-container"><img alt="test" src="img\\b31ef025f5810503.jpeg"></p>
-
-
-      </google-codelab-step>
-    
-      <google-codelab-step label="Tarea de Laboratorio 2" duration="0">
-        <p>Tomando como base la <strong>solución</strong> del diagrama E-R obtenido del ejercicio realizado de la primera guía (compañía aérea), realizar su conversión:</p>
+<p><strong>Solución Ejercicio Practico</strong></p>
+<p class="image-container"><img alt="test" src="img\\b31ef025f5810503.jpeg"></p>
+<p><strong>Tarea de Laboratorio 2</strong></p>
+<p>Tomando como base la <strong>solución</strong> del diagrama E-R obtenido del ejercicio realizado de la primera guía (compañía aérea), realizar su conversión:</p>
 <ul>
 <li>Diagrama Modelo Relacional</li>
 <li>Diagrama Relacional Normalizado (aplicar las 3 formas normales)</li>
