--- a/pages/laboratorio-05/index.html
+++ b/pages/laboratorio-05/index.html
@@ -43,9 +43,9 @@
 <p>Lo único que debemos hacer en este caso es ingresar esa sentencia SQL de consulta en nuestra definición de procedimiento. Así:</p>
 <p class="image-container"><img alt="test" src="img\\2b7d50ee6cab6eaa.png"></p>
 <p>Ahora que tenemos nuestro procedimiento, la forma de mandarlo a llamar es:</p>
-<p><strong>EXEC nombre_procedimiento</strong></p>
-<p>El cual en nuestro caso sería <strong>EXEC listaPrestamoUsuarioLibro.</strong></p>
-<p><strong>Parámetros</strong></p>
+<p><code>EXEC nombre_procedimiento</code></p>
+<p>El cual en nuestro caso sería <code>EXEC listaPrestamoUsuarioLibro.</code></p>
+<h2 is-upgraded>Parámetros</h2>
 <p>Como ya se mencionó, se pueden agregar varios parámetros a los procedimientos, pero además de eso se pueden definir también como parámetros de salida, de forma que se puedan almacenar en variables que declaremos.</p>
 <p class="image-container"><img alt="test" src="img\\919d8e2157ea25ce.png"></p>
 <p>Podemos observar que al parámetro cantidad después de su tipo de dato le especificamos que es de salida con &#34;OUTPUT&#34;. Luego vemos como la última sentencia SQL es una consulta en la que asignamos el valor de @@ROWCOUNT al parámetro de salida cantidad.</p>
@@ -54,16 +54,16 @@
 <p>Ahora, para ejecutar nuestro procedimiento:</p>
 <p class="image-container"><img alt="test" src="img\\22e2c0155c541628.png"></p>
 <p>Es importante destacar que para que estas instrucciones funcionen, debe seleccionarse todo desde la instrucción <strong>DECLARE</strong> hasta <strong>SELECT @count;</strong> y ejecutarse todo al mismo tiempo.</p>
-<p><strong>Estructuras de control</strong></p>
-<p><strong>IF...ELSE</strong></p>
+<h2 is-upgraded>Estructuras de control</h2>
+<h3 is-upgraded>IF...ELSE</h3>
 <p>T-SQL también nos permite utilizar estructuras de control de selección, como lo son if y else</p>
 <p class="image-container"><img alt="test" src="img\\202cc4b57f08f5a4.png"></p>
-<p>Ejemplo:</p>
+<p><strong>Ejemplo:</strong></p>
 <p class="image-container"><img alt="test" src="img\\73c1e866f29f444b.png"></p>
-<p><strong>WHILE</strong></p>
+<h3 is-upgraded>WHILE</h3>
 <p>De igual forma, podemos hacer estructuras de control iterativas. La sintaxis:</p>
 <p class="image-container"><img alt="test" src="img\\83e9d9cf8d5b57a1.png"></p>
-<p>Ejemplo:</p>
+<p><strong>Ejemplo:</strong></p>
 <p class="image-container"><img alt="test" src="img\\5385ad98bad26677.png"></p>
 <p>Este ejemplo imprime en pantalla los 10 primeros números calculados de la serie de Fibonacci. Tanto dentro de los procedimientos almacenados como de las funciones, pueden utilizarse estructuras de control para añadir lógica a conveniencia, como se mostrará más adelante.</p>
 
@@ -79,11 +79,11 @@
 <li>Sólo se permiten instrucciones de consulta, no es posible insertar, actualizar o eliminar datos de tablas.</li>
 </ul>
 <p>Existen 2 tipos principales de funciones. Las <strong>funciones escalares</strong> que devuelven un único valor y las <strong>funciones de tabla</strong>, que retornan tablas generadas dentro de la misma.</p>
-<p><strong>Funciones Escalares</strong></p>
+<h2 is-upgraded>Funciones Escalares</h2>
 <p>Las funciones escalares reciben varios parámetros y devuelven un único valor. Sintaxis:</p>
 <p class="image-container"><img alt="test" src="img\\80d6b34252f7ce14.png"></p>
 <p>Como puede observarse, la sintaxis en muy similar a la de un procedimiento, con algunas diferencias: los parámetros (que serán únicamente de entrada) van encerrados en paréntesis. RETURNS indica el tipo de dato que se devolverá y RETURN devuelve el valor en sí. De igual forma como con procedimientos, se puede sustituir CREATE por ALTER para modificar la función una vez haya sido creada. A continuación, algunos ejemplos de funciones, siempre sobre la base de datos de la biblioteca.</p>
-<p>Ejemplo</p>
+<p><strong>Ejemplo</strong></p>
 <p>Dado el código de un libro, se desea obtener el total recaudado por los prestamos de sus ejemplares. Si el código dado no existe, devolver -1.</p>
 <p class="image-container"><img alt="test" src="img\\db72967b277ac8ab.png"></p>
 <p>Como puede observarse, dentro de las funciones pueden incluirse estructuras de control para añadir lógica según convenga.</p>
@@ -94,7 +94,7 @@
 <p>Las funciones brindan la posibilidad que pueden ser incluidas en una consulta como si de otra columna se tratara. Si se quisiera obtener el total recaudado de cada uno de los libros, se puede ejecutar:</p>
 <p class="image-container"><img alt="test" src="img\\8dece426dbcbf096.png"></p>
 <p>De esta forma veríamos cada uno de los títulos registrados junto a su total recaudado</p>
-<p><strong>Funciones de tabla</strong></p>
+<h2 is-upgraded>Funciones de tabla</h2>
 <p>Este tipo de funciones brinda como valor de retorno una tabla generada dentro de la misma. Estas brindan la posibilidad de incluir estructuras de control como IF o WHILE. Pueden ser utilizadas en el FROM de una consulta y también en las sentencias JOIN. Para ejemplo, se puede recrear el ejemplo hecho en la parte de Procedimientos, pero ahora como una función que devuelve una tabla.</p>
 <p class="image-container"><img alt="test" src="img\\93d9269d5ad575dd.png"></p>
 <p>La tabla generada por esta función puede ser generada total o parcialmente, de la siguiente forma:</p>
@@ -105,7 +105,15 @@
       </google-codelab-step>
     
       <google-codelab-step label="Tarea" duration="0">
-        <p>Pendiente...</p>
+        <p><strong>Diagrama de la base de datos</strong><img alt="test" src="img\\1e16a54c89e72672.png"></p>
+<h2 is-upgraded>Ejercicio 1</h2>
+<p>Crear una función que reciba como parámetros 2 fechas y que retorne una tabla. La función deberá retornar el detalle de los vuelos en ese rango de fechas, incluyendo el nombre de los aeropuertos de destino y origen, así como el avión que se utilizará para realizar el vuelo.</p>
+<p><strong>Sección del resultado esperado si se ingrese las fechas ‘01/05/2021&#39; y ‘06/05/2021&#39; cómo parámetros de entrada:</strong><img alt="test" src="img\\d11fa19cf47d4d2d.png"></p>
+<h2 is-upgraded>Ejercicio 2</h2>
+<p>Los clientes VIP tienen acceso a una serie de servicios adicionales en los distintos aeropuertos que visitan, por lo que se solicita que defina la lista de clientes VIP. El criterio de evaluación consiste en verificar que el promedio de las reservas realizadas por un cliente sea mayor a 1799.00. En la evaluación se debe tener en cuenta todos los servicios extra que incluyan los clientes en las reservas.</p>
+<p>Actualizar la tabla PASAJERO incluyendo una columna con el nombre VIP de tipo entero, actualizar con &#34;0&#34; a la columna VIP de todos los pasajeros. Crear un procedimiento almacenado que calcule la lista de pasajeros VIP que almacenará en un cursor (Se sugiere realizar este paso basándose en el criterio y solución del ejercicio 1 del laboratorio 4), luego, el procedimiento almacenado recorrerá el cursor y actualizará la columna VIP de todos los pasajeros en la tabla PASAJERO con el valor de &#34;1&#34;.</p>
+<p><strong>Lista de pasajeros VIP en la base de datos:<br></strong><img alt="test" src="img\\a2b42c9b4686991e.png"></p>
+<p><strong>Sección del resultado esperado si se consulta la tabla PASAJERO:<br></strong><img alt="test" src="img\\9d0f87769becc06d.png"></p>
 
 
       </google-codelab-step>
